<resources>
    <string name="app_name">DappBirdsSdk</string>
    <string name="create_wallet">创建钱包</string>
    <string name="wallet_name">钱包名称</string>
    <string name="name_hint">设置钱包名称</string>
    <string name="wallet_password">钱包密码</string>
    <string name="password_hint">至少有8位字符，包含大小写字母和数字</string>
    <string name="password_true">重复钱包密码</string>
    <string name="suport">《服务与隐私条款》</string>
    <string name="length8">至少8位字符</string>
    <string name="big_letters">至少有1位大写字母</string>
    <string name="small_letters">至少有1位小写字母</string>
    <string name="digital">至少有1位数字</string>
    <string name="empty_name">名称不能为空！</string>
    <string name="empty_password">密码不能为空！</string>
    <string name="empty_passwordtwo">重复密码不能为空！</string>
    <string name="empty_wallet">没有钱包，请先创建钱包！</string>
    <string name="loading">加载中…</string>
    <string name="agree">请阅读《服务与隐私条款》</string>
    <string name="address">地址</string>
    <string name="cancel">取消</string>
    <string name="commit">确定</string>
    <string name="netword">网络错误，请稍后重试</string>
    <string name="no_data">暂时没有交易</string>
    <string name="cancel_pay">取消支付</string>
    <string name="pay_error">交易出现错误</string>
    <string name="password_commit">两次密码不一致</string>
    <string name="commit_password">确认钱包密码</string>
    <string name="password_content">我们无法提供找回钱包密码的功能，请确认并妥善保管保存钱包密码！</string>
    <string name="create_success">钱包已创建成功</string>
    <string name="wallet_comtent">以下是ONT钱包的WIF文件，复制并导出至安全的地方存放，一旦丢失，钱包将无法恢复</string>
    <string name="copy">复制</string>
    <string name="copy_privatekey_success">WIF已备份完成</string>
    <string name="is_copy">已复制</string>
    <string name="copy_title">以下是钱包的content文件，复制并导出至安全的地方保存，一旦丢失，钱包将无法恢复</string>
    <string name="btn_content">content\t\t备份完成</string>
    <string name="hint">提示</string>
    <string name="copy_wif">请先复制并备份WIF文件</string>
    <string name="disclaimer">免责声明</string>
    <string name="disclaimer_content">我们不承担任何因为WIF丢失以及忘记密码导致的财产损失！</string>
    <string name="error_password">密码错误</string>
    <string name="privatekey">WIF</string>
    <string name="copy_privatekey">备份WIF</string>
    <string name="copy_keystore">备份Keystore</string>
    <string name="please_private">请先复制并备份WIF文件</string>
    <string name="please_keystore">请先复制并备份Keystore文件</string>
    <string name="small">交易最小值为0.000000001</string>
    <string name="input_wallet">导入钱包</string>
    <string name="inputByprivate">通过WIF导入</string>
    <string name="inputBykeystore">通过Ksystore导入</string>
    <string name="input_title">导入类型</string>
    <string name="paste">粘贴</string>
    <string name="empty_privatekey">WIF不能为空</string>
    <string name="empty_keystore">Keystore不能为空</string>
    <string name="empty_mnemonic">助记词不能为空</string>
    <string name="pay_state">支付状态</string>
    <string name="pay_success">支付成功</string>
    <string name="input">导入</string>
    <string name="wallet">钱包</string>
    <string name="initsuccess">SDK初始化成功</string>
    <string name="empty_appid">app_id不能为空</string>
    <string name="initfail">SDK初始化失败</string>
    <string name="welcome">欢迎使用dappbirds-android-sdk,当前模式为content模式，stateLog日志打印</string>
    <string name="debug">调试</string>
    <string name="main">正式</string>
    <string name="close">关闭</string>
    <string name="open">打开</string>
    <string name="empty_balance">余额不足</string>
    <string name="empty_timestamp">时间戳不能空</string>
    <string name="zero_timestamp">时间戳不能为0或负数</string>
    <string name="empty_signature">签名字符串不能为空</string>
    <string name="empty_order">订单号不能为空</string>
    <string name="empty_amount">充值数量不能为空</string>
    <string name="empty_contracr_address">合约地址不能为空</string>
    <string name="error_signature">签名字符串格式有误</string>
    <string name="error_timestamp">时间戳格式有误</string>
    <string name="error_orderno">订单号不能超过32位</string>
    <string name="error_contract_address">合约地址有误</string>
    <string name="error_amount">充值数量格式有误</string>
    <string name="empty_open_id">openid不能为空</string>
    <string name="empty_chaintype">公链类型不能为空</string>
    <string name="ong">ONG</string>
    <string name="todo">TODO</string>
    <string name="createWallet">创建钱包</string>
    <string name="mnemonic">助记词</string>
    <string name="input_mnemonic">通过助记词导入</string>
    <string name="mnemonic_hint">请依次填写助记词，以空格隔开</string>
    <string name="saveprivatekey">备份WIF</string>
    <string name="keystore">备份KeyStore</string>
    <string name="savemnemonic">备份助记词</string>
    <string name="save_mne_hint_1">请认真按顺序抄写下方助记词，我们将在下一步验证</string>
    <string name="save_mne_hint_2">请将您抄下的单词按正确顺序输入至下方</string>
    <string name="next">下一步</string>
    <string name="error_mnemonic">助记词错误</string>
    <string name="save_mneno_success">助记词备份成功</string>
    <string name="time">时间</string>
    <string name="order_success">完成</string>
    <string name="order_faile">失败</string>
    <string name="order_wait">处理中</string>
    <string name="_24h">24h内不再输入密码</string>
    <string name="input_password_hint">请输入钱包密码</string>
    <string name="input_password">输入钱包密码</string>
    <string name="contract_address">合约地址：</string>
    <string name="pay_amount">支付金额：</string>
    <string name="_0_01_t_tong">0.01\tONG</string>
    <string name="pay_free">旷工费：</string>
    <string name="order_no">订单号：</string>
    <string name="is_read">我已阅读</string>
    <string name="_0_00">0.00</string>
    <string name="error_openid">openid格式错误</string>
</resources>
