<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_fff"
        android:orientation="vertical"
        android:padding="@dimen/dp_15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/input_password"
                android:textColor="@color/color_333"
                android:textSize="@dimen/dp_15"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_15"
                android:text="@string/cancel"
                android:textColor="@color/color_428af9"
                android:textSize="@dimen/dp_15"
                tools:ignore="RtlSymmetry,SpUsage" />
        </LinearLayout>

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            android:background="@drawable/dialog_password"
            android:ellipsize="end"
            android:hint="@string/input_password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:singleLine="true"
            android:textColor="@color/color_333"
            android:textColorHighlight="@color/color_909090"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/dp_15"
            tools:ignore="SpUsage"
            tools:targetApi="o" />

        <CheckBox
            android:id="@+id/freepassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/dp_15"
            android:background="@null"
            android:button="@null"
            android:checked="false"
            android:drawableStart="@drawable/selector_choose_coin"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center_vertical"
            android:text="@string/_24h"
            android:textColor="@color/color_428af9"
            android:textSize="@dimen/dp_13"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="100dp"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="center"
            android:background="@drawable/white_main_bg_seleor"
            android:gravity="center"
            android:text="@string/commit"
            android:textColor="@drawable/white_main_text_seleor"
            android:textSize="@dimen/dp_15"
            android:visibility="visible"
            tools:ignore="SpUsage" />

    </LinearLayout>


</ScrollView>