<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_fff"
        android:orientation="vertical"
        android:padding="@dimen/dp_15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dp_15">

            <TextView
                android:id="@+id/address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/color_909090"
                android:textSize="@dimen/dp_15"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_15"
                android:text="@string/cancel"
                android:textColor="@color/color_428af9"
                android:textSize="@dimen/dp_15"
                tools:ignore="RtlSymmetry,SpUsage" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_line"
            android:layout_marginBottom="@dimen/dp_15"
            android:background="@color/color_f0f0f0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/pay_amount"
                android:textColor="@color/color_909090"
                android:textSize="@dimen/dp_15"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/color_333"
                android:textSize="@dimen/dp_15"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/contract_address"
                android:textColor="@color/color_909090"
                android:textSize="@dimen/dp_15"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/contract_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/color_333"
                android:textSize="@dimen/dp_15"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/pay_free"
                android:textColor="@color/color_909090"
                android:textSize="@dimen/dp_15"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/_0_01_t_tong"
                android:textColor="@color/color_333"
                android:textSize="@dimen/dp_15"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/order_no"
                android:textColor="@color/color_909090"
                android:textSize="@dimen/dp_15"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/order_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/color_333"
                android:textSize="@dimen/dp_15"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@drawable/white_main_bg_seleor"
            android:gravity="center"
            android:text="@string/commit"
            android:textColor="@drawable/white_main_text_seleor"
            android:textSize="@dimen/dp_15"
            android:visibility="visible"
            tools:ignore="SpUsage" />
    </LinearLayout>

</LinearLayout>