<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.activity.CreateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_46"
        android:background="@color/color_fff"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:padding="@dimen/dp_15"
            android:scaleType="fitXY"
            android:src="@mipmap/img_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/create_wallet"
            android:textColor="@color/color_333"
            android:textSize="@dimen/dp_17"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:padding="@dimen/dp_15"
            android:scaleType="fitXY"
            android:src="@mipmap/img_back"
            android:visibility="invisible" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_line"
        android:background="@color/color_f0f0f0" />

    <LinearLayout
        android:id="@+id/lin_success"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_fff"
        android:orientation="vertical"
        android:padding="@dimen/dp_15"
        android:visibility="gone">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@mipmap/success" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/create_success"
            android:textColor="@color/color_428af9"
            android:textSize="@dimen/dp_15"
            tools:ignore="SpUsage" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_line"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@color/color_f0f0f0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/wallet_comtent"
            android:textColor="@color/color_909090"
            android:textSize="@dimen/dp_13"
            tools:ignore="SpUsage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@drawable/dialog_password"
            android:orientation="vertical"
            android:padding="@dimen/dp_15">

            <TextView
                android:id="@+id/privatekey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/color_333"
                android:textSize="@dimen/dp_13"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/copy"
                android:textColor="@color/color_428af9"
                android:textSize="@dimen/dp_15"
                tools:ignore="RtlHardcoded,SpUsage" />
        </LinearLayout>

        <Button
            android:id="@+id/finsh"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@drawable/white_main_bg_seleor"
            android:gravity="center"
            android:text="@string/copy_privatekey_success"
            android:textColor="@drawable/white_main_text_seleor"
            android:textSize="@dimen/dp_15"
            android:visibility="visible"
            tools:ignore="SpUsage" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lin_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/input_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_15"
                    android:text="@string/input_title"
                    android:textColor="@color/color_909090"
                    android:textSize="@dimen/dp_15"
                    tools:ignore="SpUsage" />

                <EditText
                    android:id="@+id/input_content"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/edittext_back"
                    android:ellipsize="end"
                    android:gravity="top|left"
                    android:hint="@string/paste"
                    android:inputType="text|textMultiLine"
                    android:minHeight="80dp"
                    android:padding="@dimen/dp_15"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/dp_15"
                    tools:ignore="RtlHardcoded,SpUsage"
                    tools:targetApi="o" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_15"
                    android:text="@string/wallet_name"
                    android:textColor="@color/color_909090"
                    android:textSize="@dimen/dp_15"
                    tools:ignore="SpUsage" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_line"
                    android:background="@color/color_f0f0f0" />

                <EditText
                    android:id="@+id/ed_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/edittext_back"
                    android:ellipsize="end"
                    android:hint="@string/name_hint"
                    android:inputType="text"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_15"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/dp_15"
                    tools:ignore="SpUsage"
                    tools:targetApi="o" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_line"
                    android:background="@color/color_f0f0f0" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_15"
                    android:text="@string/wallet_password"
                    android:textColor="@color/color_909090"
                    android:textSize="@dimen/dp_15"
                    tools:ignore="SpUsage" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_line"
                    android:background="@color/color_f0f0f0" />

                <EditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/edittext_back"
                    android:ellipsize="end"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_15"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/dp_15"
                    tools:ignore="SpUsage"
                    tools:targetApi="o" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_line"
                    android:background="@color/color_f0f0f0" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_15"
                    android:text="@string/password_true"
                    android:textColor="@color/color_909090"
                    android:textSize="@dimen/dp_15"
                    tools:ignore="SpUsage" />

                <EditText
                    android:id="@+id/ed_password_two"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/edittext_back"
                    android:ellipsize="end"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_15"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/dp_15"
                    tools:ignore="SpUsage"
                    tools:targetApi="o" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp_15"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/is_read"
                    android:textColor="@color/color_909090"
                    android:textSize="@dimen/dp_15"
                    tools:ignore="SpUsage" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/suport"
                    android:textColor="@color/color_428af9"
                    android:textSize="@dimen/dp_15"
                    tools:ignore="SpUsage" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_createaccount"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_50"
                android:layout_marginBottom="@dimen/dp_15"
                android:background="@drawable/white_main_bg_seleor"
                android:gravity="center"
                android:text="@string/create_wallet"
                android:textColor="@drawable/white_main_text_seleor"
                android:textSize="@dimen/dp_15"
                android:visibility="visible"
                tools:ignore="SpUsage" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>