<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fff"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.activity.CopyMnemonicActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_46"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:padding="@dimen/dp_15"
            android:scaleType="fitXY"
            android:src="@mipmap/img_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/savemnemonic"
            android:textColor="@color/color_333"
            android:textSize="@dimen/dp_17"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:padding="@dimen/dp_15"
            android:scaleType="fitXY"
            android:src="@mipmap/img_back"
            android:visibility="invisible" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_line"
        android:background="@color/color_f0f0f0" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_15"
        android:text="@string/save_mne_hint_1"
        android:textSize="@dimen/dp_15"
        android:textStyle="normal"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:id="@+id/lin_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@drawable/dialog_password"
        android:minHeight="@dimen/dp_100"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/verification_recy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_15"
            android:paddingTop="@dimen/dp_15" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_15" />

    <Button
        android:id="@+id/btn_state"
        android:layout_width="100dp"
        android:layout_height="@dimen/dp_30"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@drawable/white_main_bg_seleor"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@drawable/white_main_text_seleor"
        android:textSize="@dimen/dp_15"
        android:visibility="visible"
        tools:ignore="SpUsage" />
</LinearLayout>